--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,42 @@
 </head>
 <body>
     <main>
+        <h1 class="title">Wordle</h1>
+        <div class="letter-boxes"> 
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>    
+        </div>
+        <div class="letter-boxes"> 
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>    
+        </div>
+        <div class="letter-boxes"> 
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>    
+        </div>
+        <div class="letter-boxes"> 
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>    
+        </div>
+        <div class="letter-boxes"> 
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>    
+        </div>
         
     </main>
     
